# ever

./: CMakeLists.txt  depth_patch
CMake/: configure_slang.cmake
jaxutil/: quadrature.py
new_files/scene/: cameras.py
splinetracers/: __init__.py
splinetracers/fast_ellipsoid_splinetracer/: CMakeLists.txt  py_binding.cpp
splinetracers/fast_ellipsoid_splinetracer/slang/: backwards_kernel.slang  fast_shaders.slang  shaders.slang  spline-machine.slang
splinetracers/slang/: safe-math.slang
tests/: compare_quadrature.py
